# Rusthon

./: AGENT.md  BUILD_STATUS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  TAGGED_POINTER_INTEGRATION.md
docs/: .gitignore  (+6 more)
python-compiler/: Cargo.toml  README.md
python-compiler/examples/: control_flow.py  strings.py
python-compiler/src/: ast.rs  codegen.rs  error.rs  lib.rs  lowering.rs  main.rs  parser.rs  tagged_pointer.rs
python-compiler/src/compiler/: arrayness.rs  mod.rs  runtime.rs  values.rs
python-compiler/tests/: arithmetic.rs  augmented_assignment.rs  bitwise.rs  complex_control_flow.rs  control_flow.rs  default_arguments.rs  edge_cases.rs  errors.rs  floats.rs  functions.rs  input.rs  integration.rs  lib.rs  lists.rs  minimal_test.rs  numpy.rs  precedence.rs  strings.rs  tuples.rs  unary.rs  variables.rs
python-compiler/tests/snapshots/: arithmetic__operator_precedence.snap  arithmetic__simple_addition.snap  arithmetic__subtraction_and_division.snap  augmented_assignment__all_bitwise_augmented.snap  augmented_assignment__div_assign.snap  augmented_assignment__left_shift_assign.snap  augmented_assignment__or_assign.snap  bitwise__bitwise_all_ones.snap  bitwise__bitwise_and.snap  bitwise__bitwise_complex_expression.snap  bitwise__bitwise_with_negatives.snap  bitwise__bitwise_with_variables.snap  bitwise__bitwise_zero.snap  bitwise__left_shift.snap  bitwise__right_shift.snap  complex_control_flow__complex_boolean_logic.snap  complex_control_flow__factorial_iterative.snap  complex_control_flow__fibonacci_iterative.snap  (+246 more)
(+25 files in other folders)
